change to postgres

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=postgresql://taskly_becomefell:9b8d999a938ff4c50daf7e414d17f547f9ca7f7f@8ry.h.filess.io:5433/taskly_becomefell
